force-app/main/default/objects/JVMember__c/JVMember__c.object-meta.xml
<CustomObject>
    <label>JV構成員</label>
    <nameField>
        <label>名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>