force-app/main/default/objects/JVMember__c/fields/AttributeSurveyRequirement__c.field-meta.xml
<CustomField>
    <fullName>AttributeSurveyRequirement__c</fullName>
    <label>属性調査要否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要(新規)</fullName>
            </value>
            <value>
                <fullName>要(過去調査済)</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>