force-app/main/default/objects/JVMember__c/fields/CorporateName__c.field-meta.xml
<CustomField>
    <fullName>CorporateName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>法人名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>JV構成員 (取引先)</relationshipLabel>
    <relationshipName>JVMemberAccont</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>