force-app/main/default/objects/JVMember__c/fields/JVMemberAddress__c.field-meta.xml
<CustomField>
    <fullName>JVMemberAddress__c</fullName>
    <inlineHelpText>保存時に法人名（取引先）の住所が自動転記されます</inlineHelpText>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>