force-app/main/default/objects/JVMember__c/fields/JVMemberAttributeSurveyResult__c.field-meta.xml
<CustomField>
    <fullName>JVMemberAttributeSurveyResult__c</fullName>
    <inlineHelpText>属性調査対象外or調査結果問題なし</inlineHelpText>
    <label>属性調査結果による取引可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>