force-app/main/default/objects/JVMember__c/fields/JVMemberCompanyTSRScore__c.field-meta.xml
<CustomField>
    <fullName>JVMemberCompanyTSRScore__c</fullName>
    <label>COMPANY(TSR)評点</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>