force-app/main/default/objects/JVMember__c/fields/JVMemberContractConfirmationResult__c.field-meta.xml
<CustomField>
    <fullName>JVMemberContractConfirmationResult__c</fullName>
    <inlineHelpText>覚書締結は本伺認許後とすること</inlineHelpText>
    <label>JV契約(覚書)内容の合意形成</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>