force-app/main/default/objects/JVMember__c/fields/JVMemberCorporateName__c.field-meta.xml
<CustomField>
    <fullName>JVMemberCorporateName__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>法人名</label>
    <type>Text</type>
</CustomField>