force-app/main/default/objects/JVMember__c/fields/JVMemberCustomerSurveyResult__c.field-meta.xml
<CustomField>
    <fullName>JVMemberCustomerSurveyResult__c</fullName>
    <inlineHelpText>輸管Ｂが定める安全顧客or顧客調査結果問題なし</inlineHelpText>
    <label>輸管顧客調査結果による取引可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>