force-app/main/default/objects/JVMember__c/fields/JVMemberDivisionName__c.field-meta.xml
<CustomField>
    <fullName>JVMemberDivisionName__c</fullName>
    <label>部署名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>