force-app/main/default/objects/JVMember__c/fields/JVMemberElectricityRatingValue__c.field-meta.xml
<CustomField>
    <fullName>JVMemberElectricityRatingValue__c</fullName>
    <label>経審(電気)評定値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>