force-app/main/default/objects/JVMember__c/fields/JVMemberEvaluationResult__c.field-meta.xml
<CustomField>
    <fullName>JVMemberEvaluationResult__c</fullName>
    <inlineHelpText>属性・輸管・契約・財務・技術力で各1以上〇、合計5以上の〇で「諾」判定。</inlineHelpText>
    <label>評価結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>諾</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>