force-app/main/default/objects/JVMember__c/fields/JVMemberEvaluationResultComment__c.field-meta.xml
<CustomField>
    <fullName>JVMemberEvaluationResultComment__c</fullName>
    <label>評価結果コメント</label>
    <type>TextArea</type>
</CustomField>