force-app/main/default/objects/JVMember__c/fields/JVMemberFinancialEvaluationCompanyTSR__c.field-meta.xml
<CustomField>
    <fullName>JVMemberFinancialEvaluationCompanyTSR__c</fullName>
    <label>財務評価(COMPANY(TSR)評点が50点以上)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>