force-app/main/default/objects/JVMember__c/fields/JVMemberFinancialEvaluationRelatedCompan__c.field-meta.xml
<CustomField>
    <fullName>JVMemberFinancialEvaluationRelatedCompan__c</fullName>
    <label>財務評価(当社関係会社）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>