force-app/main/default/objects/JVMember__c/fields/JVMemberFinancialEvaluationTradingAchiev__c.field-meta.xml
<CustomField>
    <fullName>JVMemberFinancialEvaluationTradingAchiev__c</fullName>
    <label>財務評価(当社と取引実績あり(機器供給/施工実績）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>