force-app/main/default/objects/JVMember__c/fields/JVMemberFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>JVMemberFiscalYear__c</fullName>
    <label>会計年度</label>
    <length>255</length>
    <type>Text</type>
</CustomField>