force-app/main/default/objects/JVMember__c/fields/JVMemberLastestFiscalYearProfit__c.field-meta.xml
<CustomField>
    <fullName>JVMemberLastestFiscalYearProfit__c</fullName>
    <label>直近年度利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>