force-app/main/default/objects/JVMember__c/fields/JVMemberLastestFiscalYearSales__c.field-meta.xml
<CustomField>
    <fullName>JVMemberLastestFiscalYearSales__c</fullName>
    <label>直近年度売上高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>