force-app/main/default/objects/JVMember__c/fields/JVMemberRatio__c.field-meta.xml
<CustomField>
    <fullName>JVMemberRatio__c</fullName>
    <label>比率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>