force-app/main/default/objects/JVMember__c/fields/JVMemberRepresentative__c.field-meta.xml
<CustomField>
    <fullName>JVMemberRepresentative__c</fullName>
    <label>代表者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>