force-app/main/default/objects/JVMember__c/fields/JVMemberSelectionReason__c.field-meta.xml
<CustomField>
    <fullName>JVMemberSelectionReason__c</fullName>
    <inlineHelpText>選定根拠を明確にし、継続性を確保したパートナー選定を行うこと。</inlineHelpText>
    <label>選定理由</label>
    <type>TextArea</type>
</CustomField>