force-app/main/default/objects/JVMember__c/fields/JVMemberTechnologyEvaluationOtherCompany__c.field-meta.xml
<CustomField>
    <fullName>JVMemberTechnologyEvaluationOtherCompany__c</fullName>
    <label>技術評価(当社以外のメーカとのJVで施工実績あり）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>