force-app/main/default/objects/JVMember__c/fields/JVMemberTechnologyEvaluationSame__c.field-meta.xml
<CustomField>
    <fullName>JVMemberTechnologyEvaluationSame__c</fullName>
    <label>技術評価(同顧客/同施工場所/同規模元請施工実績あり）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>