force-app/main/default/objects/JVMember__c/fields/JVMemberTelecommunicationsRatingValue__c.field-meta.xml
<CustomField>
    <fullName>JVMemberTelecommunicationsRatingValue__c</fullName>
    <label>経審(電気通信)評定値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>