force-app/main/default/objects/JVMember__c/fields/QuoteBiddingInquiry__c.field-meta.xml
<CustomField>
    <fullName>QuoteBiddingInquiry__c</fullName>
    <label>伺い件名</label>
    <referenceTo>QuoteBiddingInquiry__c</referenceTo>
    <relationshipLabel>JV構成員</relationshipLabel>
    <relationshipName>JVMemberToQuoteBiddingInquiry</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>