force-app/main/default/objects/JVMember__c/fields/ReasonIfSurveyNotRequired__c.field-meta.xml
<CustomField>
    <fullName>ReasonIfSurveyNotRequired__c</fullName>
    <label>(属性調査不要の場合)理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>上場企業</fullName>
            </value>
            <value>
                <fullName>上場企業の関係会社</fullName>
            </value>
            <value>
                <fullName>官公庁</fullName>
            </value>
            <value>
                <fullName>準官公庁</fullName>
            </value>
            <value>
                <fullName>公益法人</fullName>
            </value>
            <value>
                <fullName>公立病院</fullName>
            </value>
            <value>
                <fullName>公立教育施設</fullName>
            </value>
            <value>
                <fullName>高速道路会社法に基づく特殊会社</fullName>
            </value>
            <value>
                <fullName>高速道路会社法に基づく特殊会社の関係会社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>