force-app/main/default/objects/JVMember__c/validationRules/JVAttributeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>JVAttributeCheck</fullName>
    <active>true</active>
    <description>属性・輸管・法務・財務・技術力で各１つ以上〇が無いとエラーにする</description>
    <errorConditionFormula>AND(
    OR(
        TEXT(JVMemberAttributeSurveyResult__c) != &quot;〇&quot;,
        TEXT(JVMemberCustomerSurveyResult__c ) != &quot;〇&quot;,
        TEXT(JVMemberContractConfirmationResult__c ) != &quot;〇&quot;,
        AND(
            TEXT(JVMemberFinancialEvaluationCompanyTSR__c ) != &quot;〇&quot;,
            TEXT(JVMemberFinancialEvaluationTradingAchiev__c ) != &quot;〇&quot;,
            TEXT(JVMemberFinancialEvaluationRelatedCompan__c ) != &quot;〇&quot;
        ),
        AND(
            TEXT(JVMemberTechnologyEvaluationOurCompany__c ) != &quot;〇&quot;,
            TEXT(JVMemberTechnologyEvaluationOtherCompany__c ) != &quot;〇&quot;,
            TEXT(JVMemberTechnologyEvaluationSame__c ) != &quot;〇&quot;
        )
    ),
    TEXT(JVMemberEvaluationResult__c ) == &quot;諾&quot;
)</errorConditionFormula>
    <errorDisplayField>JVMemberEvaluationResult__c</errorDisplayField>
    <errorMessage>属性・輸管・法務・財務・技術力で各1以上〇、合計5以上の〇で「諾」判定には出来ません。</errorMessage>
</ValidationRule>