force-app/main/default/objects/JVMember__c/validationRules/JVMemberSelectionReasonRule.validationRule-meta.xml
<ValidationRule>
    <fullName>JVMemberSelectionReasonRule</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( JVMemberSelectionReason__c )</errorConditionFormula>
    <errorDisplayField>JVMemberSelectionReason__c</errorDisplayField>
    <errorMessage>選定理由は入力必須です。</errorMessage>
</ValidationRule>